Putting it together.
With this CL, info.html is serving correctly

--- a/copal/Makefile
+++ b/copal/Makefile
@@ -3,7 +3,7 @@
 .cpl.hh:
 	copal $< -o $@
 
-all: test_greenbaby.hh coming_soon.hh
+all: test_greenbaby.hh coming_soon.hh muse_info.hh
 
 clean:
 	rm *.hh
