--- a/copal/Makefile
+++ b/copal/Makefile
@@ -3,7 +3,7 @@
 .cpl.hh:
 	copal $< -o $@
 
-all: test_greenbaby.hh coming_soon.hh muse_info.hh
+all: test_greenbaby.hh coming_soon.hh muse_info.hh nav_bar.hh
 
 clean:
 	rm *.hh
