DB objects necessary for migrating current muse_info.cpl draft

--- a/src/db/Makefile
+++ b/src/db/Makefile
@@ -1,6 +1,11 @@
-DB_HEADERS = baby_phrase.hh mun.hh
+RPEXPRESS_HH = muse.hh mun.hh artwork.hh upload.hh userpic.hh
+
+DB_HEADERS = baby_phrase.hh rpexpress.hh
 DB_CXX = $(DB_HEADERS:.hh=.odb.cc)
 DB_OBJECTS = $(DB_HEADERS:.hh=.odb.o)
+
+rpexpress.hh: $(RPEXPRESS_HH)
+	cat $(RPEXPRESS_HH) > rpexpress.hh
 
 odb_support.a: $(DB_OBJECTS)
 	ar rcs odb_support.a $(DB_OBJECTS)
@@ -10,4 +15,4 @@ odb_support.a: $(DB_OBJECTS)
 		--odb-file-suffix .odb. --generate-query --generate-schema \
 		--std c++11 -d pgsql $*.hh
 clean:
-	rm -f *.odb.ii *.odb.cc *.odb.hh *.odbsql *.a *.odb.o
+	rm -f *.odb.ii *.odb.cc *.odb.hh *.odbsql *.a *.odb.o rpexpress.hh
