--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,7 @@
 export LOCALD = /home/rpexpress/local
 export CXXFLAGS = --std=c++1y -g -I$(PWD) -I$(LOCALD)/include -I. -Wall -Wno-unknown-pragmas
 
-TOP_CCS = session.cc urlencode.cc base64.cc keys.cc post.cc html_utility.cc genpaths_fcgi.cc user.cc
-# TOP_OBJECTS = session.o urlencode.o base64.o keys.o post.o html_utility.o genpaths_fcgi.o user.o
+TOP_CCS = session.cc urlencode.cc base64.cc keys.cc post.cc html_utility.cc genpaths_fcgi.cc user.cc crypto.cc
 TOP_OBJECTS = $(TOP_CCS:.cc=.o)
 TOP_LIBS = -lboost_thread-mt -lboost_system-mt -lcryptopp -lodb -lodb-pgsql -lboost_date_time-mt
 
