--- a/src/copal/Makefile
+++ b/src/copal/Makefile
@@ -3,7 +3,7 @@
 .cpl.hh:
 	copal $< -o $@
 
-all: test_greenbaby.hh coming_soon.hh muse_info.hh nav_bar.hh auth.hh gen303.hh
+all: test_greenbaby.hh coming_soon.hh muse_info.hh nav_bar.hh auth.hh gen303.hh user_box.hh
 
 clean:
 	rm -f *.hh
