laying the foundation - buildscripts and type handling

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,10 @@
 export LOCALD = /home/rpexpress/local
 export CXXFLAGS = --std=c++1y -g -I$(PWD) -I$(LOCALD)/include -I. -Wall -Wno-unknown-pragmas
 
-TOP_CCS = session.cc urlencode.cc base64.cc keys.cc post.cc html_utility.cc genpaths_fcgi.cc user.cc crypto.cc
+TOP_CCS = session.cc urlencode.cc base64.cc keys.cc post.cc html_utility.cc genpaths_fcgi.cc user.cc crypto.cc \
+	bbcode/bbcode.cc bbcode/parse_trace.cc
 TOP_OBJECTS = $(TOP_CCS:.cc=.o)
+TOP_DEPFILES = $(TOP_CCS:.cc=.d)
 TOP_LIBS = -lboost_thread-mt -lboost_system-mt -lcryptopp -lodb -lodb-pgsql -lboost_date_time-mt
 
 top.fcgi: genpaths_fcgi.cc copal_headers copal_paths odb_stuff $(TOP_OBJECTS)
@@ -36,7 +38,7 @@ clean_odb:
 	cd db && make clean
 
 clean: clean_copal clean_paths clean_odb
-	rm -f top.fcgi *.o *.d
+	rm -f top.fcgi *.o *.d $(TOP_OBJECTS) $(TOP_DEPFILES)
 
 install:
 	killall testing.fcgi; cp top.fcgi ~/testing.fcgi
